# lan-mouse-mobile

./: README.md  analysis_options.yaml  flutter_launcher_icons.yaml  flutter_rust_bridge.yaml  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/rohit/lan_mouse_mobile/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/models/: client.dart  event_type.dart  input_event.dart  keyboard_event.dart  pointer_event.dart
lib/app/modules/home/: home.dart
lib/app/modules/home/widgets/: add_client.dart  home_connections.dart  home_general.dart  home_top.dart
lib/app/modules/server/: server.dart
lib/app/modules/server/widgets/: keyboard_handler.dart  mouse_buttons.dart  mouse_pad.dart
lib/app/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/app/rust/api/: lan_mouse_server.dart
lib/app/services/: lan_mouse_server.dart  rust_service.dart  storage_service.dart
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: connect.rs  crypto.rs  lan_mouse_server.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_lan_mouse_mobile.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_lan_mouse_mobile.podspec
rust_builder/windows/: CMakeLists.txt
