[package]
name = "rust_lib_lan_mouse_mobile"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.6.0"
sha2 = "0.10.8"
webrtc-dtls = { version = "0.10.0", features = ["pem"] }
webrtc-util = "0.9.0"
thiserror = "2.0.0"
tokio = { version = "1.32.0", features = [
    "io-util",
    "io-std",
    "macros",
    "net",
    "process",
    "rt",
    "sync",
    "signal",
] }
tokio-util = "0.7.11"
log = "0.4.20"
env_logger = "0.11.3"
local-channel = "0.1.5"
lan-mouse-ipc = { git = "https://github.com/feschber/lan-mouse" }
lan-mouse-proto = { git = "https://github.com/feschber/lan-mouse" }
slab = "0.4.9"
