[package]
name = "rust_lib_lan_mouse_mobile"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.6.0"
sha2 = "0.10.8"
webrtc-dtls = { version = "0.10.0", features = ["pem"] }
webrtc-util = "0.9.0"
thiserror = "2.0.2"
tokio = { version = "1.41.1", features = [
    "io-util",
    "io-std",
    "macros",
    "net",
    "process",
    "rt",
    "sync",
    "signal",
] }
tokio-util = "0.7.11"
log = "0.4.20"
pool = "0.1.4"
